Wed, March 18 Daniel R. Fisher
1.  I improved the way the electrons are assigned to the nuclei.
    Previously there were some cases where too many electrons were
    being assigned to one nucleus, which caused the initialization to
    crash.

Wed, Feb 18 Amos Anderson
1.  I've been trying to get the pseudopotential code to work... I fixed a bug,
    discovered by comparing with 'qwalk' (thanks!), but I'm still not sure if I
    have it right... My Cr2 diffusion calculation always goes to crazytown! Some
    systems are working, so I'll just have to see if they give reasonable energies.

2.  Along the lines of Cr calculations, I hacked Dan's initialization code so that
    it produces *something* for initialization, even if his code wasn't designed to
    handle Z>18.

Thurs, Dec 18 Daniel R. Fisher
1.  I changed the criteria for fitting replacement orbitals again.
    The range is now ten percent of the difference between the value of
    the original orbital at the radius of correction and the origin.
    The replacement orbitals are much closer to the original ones now.

Fri, Nov 21 Daniel R. Fisher
1.  I changed the way QMCElectronNucleusCusp fits replacement
    orbitals.  Previously it changed the value of the replacement
    orbital at the nucleus until the overall local energy was close to
    an 'ideal curve.'  Now the value at the nucleus is constrained to
    be within 10% of the value of the original orbital.
    This is because the replacement orbitals in some calculations were
    drastically different from the original ones and were giving bad
    results.  
    I added a new flag 'print_replacement_orbitals,' which will print
    out the original and replacement orbital parameters.  The
    parameters can be read and visualized with the plot_orbital.py
    script.  I recommend that users examine the replacement orbitals
    before starting calculations to make sure they are sensible.

Mon, Nov 17 Amos Anderson